# lembar

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirement.txt
src/lembar/: __init__.py  __main__.py  cli.py  common.py  editing.py  extraction.py  forms.py  inspection.py  page_ops.py  signatures.py
tests/: test_extraction.py  test_inspection.py  test_page_ops.py  test_signatures.py
