[project]
name = "lembar"
version = "0.1.0"
description = "Small command-line tools for inspecting PDF files."
license = "BSD-3-Clause"
requires-python = ">=3.14"
dependencies = [
  "asn1crypto>=1.5.1",
  "cryptography>=47.0.0",
  "ocrmypdf>=17.4.2",
  "pdfplumber>=0.11.9",
  "Pillow>=12.2.0",
  "pypdf>=6.10.2",
  "reportlab>=4.5.0",
]

[project.scripts]
lembar = "lembar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
